# P1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Enter CPR .c  Enter CPR .h  Makefile  cmake_install.cmake  dosagecalc.c  dosagecalc.h  identifier.sqlite  login.c  login.h  main.c  medcine  medcine.cbp  pass.json  patient information.c  patient information.h  users.json
.cmake/api/v1/reply/: cache-v2-a33c9ecd11666cebbea3.json  cmakeFiles-v1-695b0cdbb824d078a55a.json  codemodel-v2-328569e16d09e055407d.json  index-2023-11-07T09-23-31-0587.json  target-medcine-Debug-4f54958927987ea4ab2e.json
